# servant-effectful

./: .gitignore  Makefile  README.md  cabal.project  effectful-servant.cabal  flake.nix  servant-effectful.cabal
.github/workflows/: ci.yml
src/Effectful/: Servant.hs
src/Effectful/Servant/: Generic.hs
test/: Main.hs  Utils.hs
