cabal-version:      3.0
name:               effectful-servant
version:            0.0.1.0
homepage:
  https://github.com/haskell-effectful/effectful-servant/tree/main/effectful-servant#readme

bug-reports:        https://github.com/haskell-effectful/effectful-servant/issues
author:             Hécate Moonlight
maintainer:         Hécate Moonlight
license:            MIT
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE.md
  README.md

source-repository head
  type:     git
  location: https://github.com/haskell-effectful/effectful-servant

common common-extensions
  default-extensions:
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    TypeFamilies
    ScopedTypeVariables
    TypeApplications
    TypeOperators

  default-language:   Haskell2010

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind
    -Wno-unticked-promoted-constructors

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

library
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  src
  exposed-modules: Effectful.Servant
  build-depends:
    , base            <=4.17
    , servant
    , servant-server
    , effectful-core ^>=1.0
    , hashable
    , mtl
    , warp
    , wai

test-suite effectful-servant-test
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Utils
  hs-source-dirs: test
  build-depends:
    , base
    , servant
    , servant-server
    , effectful-servant
    , effectful-core
    , hashable
    , tasty
    , tasty-hunit
