cabal-version:      3.0
name:               servant-effectful
version:            0.0.1.0
homepage:
  https://github.com/haskell-effectful/servant-effectful/tree/main/servant-effectful#readme

bug-reports:
  https://github.com/haskell-effectful/servant-effectful/issues

author:             Hécate Moonlight
maintainer:         Hécate Moonlight
license:            MIT
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  LICENSE.md
  README.md

tested-with:        GHC ==9.2.8 || ==9.4.8 || ==9.6.6 || ==9.8.4 || ==9.10.1

source-repository head
  type:     git
  location: https://github.com/haskell-effectful/servant-effectful

common common-extensions
  default-extensions:
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

common common-ghc-options
  ghc-options:
    -Wall -Wcompat -Werror -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind
    -Wno-unticked-promoted-constructors -Wunused-packages

common common-rts-options
  ghc-options: -rtsopts -threaded -with-rtsopts=-N

library
  import:          common-extensions
  import:          common-ghc-options
  hs-source-dirs:  src
  exposed-modules:
    Effectful.Servant
    Effectful.Servant.Generic

  build-depends:
    , base            <5
    , effectful-core  >=2     && <3
    , mtl             >=2
    , network         >=2.3
    , servant-server  ^>=0.20
    , wai             ^>=3.3
    , warp            ^>=3.5

test-suite servant-effectful-test
  import:         common-extensions
  import:         common-ghc-options
  import:         common-rts-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Utils
  hs-source-dirs: test
  buildable:      False
  build-depends:
    , base
    , effectful-core
    , hashable
    , servant
    , servant-effectful
    , servant-server
    , tasty
    , tasty-hunit
